--- a/index.html
+++ b/index.html
@@ -77,12 +77,17 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
+         &nbsp;
         <a href="https://twitter.com/BilalKh27798062" class="twitter"><i class="bi bi-twitter"></i></a>
+         &nbsp;
         <a href="https://www.tiktok.com/@bk_beast20?_t=8Yl5SX2DbxC&_r=1" class="tiktok"><i class="bi bi-tiktok"></i></a>
+         &nbsp;
         <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=bilalkhan25j@gmail.com" target="_blank"class="E-mail"><i class="bi bi-envelope-at"></i></a>
         &nbsp;
         <a href="tel:0303-2581814" class="Phone"><i class="bi bi-telephone"></i></a>
+         &nbsp;
         <a href="https://wa.me/923032581814" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+         &nbsp;
         <a href="https://www.linkedin.com/in/muhammad-bilal-khan-39045a22b/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
