--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>I'm <span>MOHAMMAD BILAL ZEESHAN KHAN.</span> A web, Wordpress & smart contract DEVELOPER.</h2>
+          <h2>I'm <span>SYED MOHAMMAD BILAL ZEESHAN KHAN.</span> A web, Wordpress & smart contract DEVELOPER.</h2>
           <p>I am a Web ,WorPress And Smart Contract Developer.To Work In An Organization Which Provides Me With Ample Opportunities To Enhance My Skill And Knowledge Along With Growth Of The Organization. Strong creative and analytical skills. Team player with an eye for detail. </p>
           
         </div>
