--- a/Skills.html
+++ b/Skills.html
@@ -107,6 +107,7 @@
               Smart Contract Coding <br>
               Blockchain Literacy <br>
               Problem-Solving <br>
+              Copywriting <br>
               Computer Literacy <br>
               Strong Communication</p>
 
